--- a/.config/.example.yaml
+++ b/.config/.example.yaml
@@ -3,3 +3,13 @@ FEISHU_CONFIG:
   FEISHU_API_HOST: https://open.feishu.cn
   FEISHU_APP_ID: 
   FEISHU_APP_SECRET: 
+MONGODB_CONFIG:
+  name: "fast_gateway_test"          # 自定义次数据库链接名称
+  type: mongodb                      # 数据库链接类型
+  url: "mongodb://localhost:27017"   # 数据库链接地址
+  username: "xxxx"                   # 数据库链接用户名
+  password: "123456"                 # 数据库链接密码
+  database: "fast_gateway_test"      # 数据库名
+  entities: "mongo"                  # 自定义加载类型
+  logging: false                     # 数据库打印日志
+  synchronize: true                  # 是否开启同步数据表功能
