--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "cross-env RUNNING_ENV=dev nest start --watch",
     "start:hot": "cross-env RUNNING_ENV=dev nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env RUNNING_ENV=dev node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -32,13 +32,17 @@
     "@nestjs/swagger": "^6.0.1",
     "axios": "^0.27.2",
     "cache-manager": "^4.1.0",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify": "^4.2.0",
     "fastify-swagger": "^5.2.0",
+    "mongodb": "^4.7.0",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.7",
     "yaml": "^2.1.1"
   },
   "devDependencies": {
