--- a/package.json
+++ b/package.json
@@ -22,54 +22,60 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.4.0",
     "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^9.0.3",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^9.0.3",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-fastify": "^8.4.7",
-    "@nestjs/swagger": "^6.0.1",
+    "@nestjs/platform-express": "^9.0.3",
+    "@nestjs/platform-fastify": "^9.0.3",
+    "@nestjs/swagger": "^6.0.3",
     "axios": "^0.27.2",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
+    "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "fastify": "^4.2.0",
-    "fastify-swagger": "^5.2.0",
+    "dayjs": "^1.11.3",
+    "fast-json-parse": "^1.0.3",
+    "fastify": "^4.2.1",
+    "mkdirp": "^1.0.4",
     "mongodb": "^4.7.0",
     "mysql": "^2.18.1",
+    "pino-multi-stream": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.5.6",
+    "split2": "^4.1.0",
     "typeorm": "^0.3.7",
     "yaml": "^2.1.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/testing": "^9.0.3",
     "@types/cache-manager": "^4.0.1",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/jest": "28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "cross-env": "^7.0.3",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "28.1.2",
+    "prettier": "^2.7.1",
     "run-script-webpack-plugin": "^0.1.1",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.2.4",
+    "ts-jest": "28.0.5",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.8.2",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5",
+    "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-node-externals": "^3.0.0"
   },
